# chessnote

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: demo.ipynb  象棋笔记——急进中兵.ipynb
src/chessnote/: ChessBoardRenderer.py  ChessChecker.py  ChessParser.py  ChessRecorder.py  ChessState.py  __init__.py  utils.py
tests/: test_ChessBoardRenderer.py  test_ChessChecker.py  test_ChessParser.py  test_ChessRecorder.py  test_ChessState.py
