[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chessnote"
version = "0.0.1"
authors = [{ name = "fenglielie", email = "fenglielie@qq.com" }]
description = "Chinsees Chess Note Tool"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "notebook>=7.0",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
]
